scss/_configuration.scss
.configuration-modal {
  .item-checkbox .item-content {
    background-color: inherit;
  }
  .item p.item-title,
  .item-reorder .button.icon {
    color: $text-color;
  }
  .item p.item-title {
    padding-left: 55px;
    font-size: 5vw;
  }
  .item-checkbox {
    padding-left: 10px;
  }
  .goco-checkbox {
    width: 100%;
    height: 100%;
    position: relative;
    display: inline-block;
    padding: ($checkbox-height / 4) ($checkbox-width / 4);
    cursor: pointer;
    input {
      display: none !important;
    }
    &.ion-checkmark:before,
    &.ion-close:before {
      color: $text-color;
      font-size: 30px;
      position: absolute;
      left: 0;
      display: table;
      width: ($checkbox-width / 2);
      height: ($checkbox-width / 4) - 1;
    }
    &.disabled {
      opacity: 0.5;
    }
  }

  .item-checkbox .goco-checkbox {
    position: absolute;
    top: 50%;
    left: 15px;
    z-index: $z-index-item-checkbox;
    margin-top: (($checkbox-height + ($checkbox-height / 2)) / 2) * -1;
  }
}

